# whereami

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: app.py  auth.py  db.py  game.py  locations.json  scoring.py
frontend/: app.js  index.html  styles.css
